solved modal footer layout issue

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -19,3 +19,6 @@
 .control-group small {
 	font-size: 80%;
 }
+.modal form {
+	margin-bottom: 0;
+}
